welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:13: error: not found: value estSurBiscuits
	if(estSurBiscuits)
           ^RunHalf:18: error: ambiguous reference to overloaded definition,
both method * in class Int of type (x: Char)Int
and  method * in class Int of type (x: Short)Int
match expected type ?
	if(2*biscuits = caseOrange + 2)
            ^