welcome.lessons.welcome.variables.RunHalf.scala.code
override def run() {
var biscuits = 0
var caseOrange = 0
var arretes = 0
while(arretes != 1)
{
	if(estSurOrange)
	{
		caseOrange = caseOrange + 1;
	}

	if(estSurBiscuits)
	{
		biscuits = biscuits + 1;
	}

	if(2*biscuits = caseOrange + 2)
	{
		arretes = 1;
	}

	avance()
}

}
